fixes restaurant requests
